@@ -101,6 +101,7 @@ You can read our Terms of Service [here](https://en.wordpress.com/tos).
 * Add - Redact sensitive data before logging.
 * Add - Support for WooCommerce Subscriptions admin-initiated payment method changes.
 * Add - Link to Subscription admin pages from Transactions views.
+* Add - Support for Subscriptions in transaction search.
 
 = 1.4.1 - 2020-09-07 =
 * Fix - Only redirect to the onboarding screen if the plugin has been individually activated using the plugins page.
